# llm-api-daily-benchmark

./: .dockerignore  .env.example  .env.proxy  .gitignore  CLAUDE.md  Dockerfile  MIGRATION_GUIDE.md  README.md  check_phase1.py  deploy.sh  docker-compose.yml  phase1_review_report.md  pyproject.toml  quickstart.md  test_logprobs.py
.github/workflows/: docker-build.yml
.opencode/skills/: brainstorming  dispatching-parallel-agents  executing-plans  finishing-a-development-branch  receiving-code-review  requesting-code-review  subagent-driven-development  systematic-debugging  test-driven-development  using-git-worktrees  using-superpowers  verification-before-completion  writing-plans  writing-skills
.sisyphus/drafts/: llm-benchmark-spec-staged.md  llm-benchmark-spec.md  plan-reflection-vs-spec.md  plan-review-llm-benchmark.md
.sisyphus/evidence/: task-1-deps.txt  task-1-dir-structure.txt  task-1-gitignore.txt  task-2-models.txt  task-2-validation-error.txt  task-3-config-system.txt
.sisyphus/plans/: 2026-03-31-stage1-review-fixes.md  llm-benchmark.md  stage1-mvp.md
.sisyphus/specs/: llm-benchmark-overview.md  llm-benchmark-stage1.md  llm-benchmark-stage2.md  llm-benchmark-stage3.md  llm-benchmark-stage4.md
benchmark/: cli.py  config.py  performance_benchmark.py
benchmark/adapters/: base.py  bigcodebench_adapter.py  frontcode_adapter.py  gsm8k_adapter.py  hf_loader.py  math_adapter.py  mmlu_adapter.py  mmlu_pro_adapter.py  probe_adapter.py
benchmark/analysis/: cluster_analyzer.py  fingerprint.py  models.py  quality_signals.py  stability_analyzer.py
benchmark/cli/: __init__.py  __main__.py  registry.py  runner.py  utils.py
benchmark/configs/: default.yaml  models.yaml.example  settings.yml
benchmark/core/: __init__.py  advanced_statistics.py  concurrency.py  evaluator.py  llm_adapter.py  logging_config.py  prompt_builder.py  rate_limiter.py  reporter.py  response_parser.py  scheduler.py  semaphore_wrapper.py  statistics.py  timing_tracker.py  tz.py
benchmark/models/: database.py  schemas.py  scoring_task.py
benchmark/probes/: __init__.py  issue-trace.md  registry.py  runner.py
benchmark/repository/: __init__.py  atomic_write.py  file_repository.py  interface.py  (+1 more)
docs/: benchmark-perf-investigation.md
scripts/: generate_frontcode_tasks.py  start_scoring_worker.sh
tests/: test_adaptive_baseline.py  test_advanced_statistics.py  test_analysis_handler.py  test_analysis_models.py  test_answer_handler.py  test_app_integration.py  test_async_scoring.py  test_atomic_write.py  test_backend_performance.py  test_backend_static_scorers.py  test_backend_test_coverage.py  test_base_scorer.py  test_choice_match_scorer.py  test_cli.py  test_cluster_analyzer.py  test_cluster_handler.py  test_composite_scorer.py  test_concurrency.py  test_concurrent_execution.py  test_config.py  test_connection_pool.py  test_consistency_probe.py  test_database.py  test_dynamic_probe_generator.py  test_evaluator.py  test_exact_match_scorer.py  test_execution_log_handler.py  test_execution_scorer.py  test_file_repository.py  test_fingerprint.py  test_fingerprint_probe.py  test_frontcode_adapter.py  test_frontend_scorers.py  test_hf_loader.py  test_index_builder.py  test_integration_composite.py  test_keyword_match_scorer.py  test_llm_adapter.py  test_logprobs_probe.py  test_math_adapter.py  (+28 more)
(+135 files in other folders)
