[project]
name = "llm-api-daily-benchmark"
version = "0.1.0"
description = "LLM API daily benchmark - track model performance over time"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "streamlit>=1.28",
    "datasets>=2.14",
    "pyyaml>=6.0",
    "requests>=2.31",
    "pandas>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
benchmark = "benchmark.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["benchmark"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]